--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.2",
     "express": "4.18.2",
@@ -23,7 +24,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
-    "@types/jsonwebtoken": "8.5.1",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "16.11.10",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
@@ -32,5 +33,7 @@
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.3"
-  }
+  },
+  "repository": "git@github.com:pf-time6/Open-Book-API.git",
+  "author": "daniel delos silva <apeiron52@gmail.com>"
 }
