--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "babel": "^6.23.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.2",
     "express": "4.18.2",
