--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "cross-env": "^7.0.3",
     "dotenv": "16.0.2",
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
