--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "reflect-metadata": "0.1.13",
     "typeorm": "0.3.11",
     "uuid": "9.0.0",
-    "yup": "0.32.11"
-  },
-  "devDependencies": {
+    "yup": "0.32.11",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
@@ -40,6 +38,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.3"
   },
+  "devDependencies": {},
   "repository": "git@github.com:pf-time6/Open-Book-API.git",
   "author": "daniel delos silva <apeiron52@gmail.com>"
 }
