--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "4.18.2",
     "express-async-errors": "3.1.1",
     "jsonwebtoken": "8.5.1",
+    "jwt-decode": "^3.1.2",
     "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
     "typeorm": "0.3.11",
