--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reflect-metadata": "0.1.13",
     "typeorm": "0.3.11",
     "uuid": "9.0.0",
-    "yup": "0.32.11"
+    "yup": "0.32.11",
+    "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -38,8 +39,7 @@
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "4.9.3"
+    "ts-node-dev": "^2.0.0"
   },
   "repository": "git@github.com:pf-time6/Open-Book-API.git",
   "author": "daniel delos silva <apeiron52@gmail.com>"
