--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "reflect-metadata": "0.1.13",
     "typeorm": "0.3.11",
     "uuid": "9.0.0",
-    "yup": "0.32.11",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
