--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "reflect-metadata": "0.1.13",
     "typeorm": "0.3.11",
     "uuid": "9.0.0",
-    "yup": "0.32.11"
-  },
-  "devDependencies": {
+    "yup": "0.32.11",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
